src/snapshots/afrotd__parser__tests__interpretation_7.1.4_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 4
index: 2
text: "A30, der sich als Back aufgestellt hat, startet seine legale Bewegung. Er dreht sich dann so, dass er in Richtung seiner Scrimmage Line\nschaut und sich seitlich bewegt. Beim Snap befindet sich A30 weiterhin\nhinter der neutralen Zone, bewegt sich leicht vorgebeugt nach vorne\noder seine seitliche Bewegung geht leicht in Richtung seiner Scrimmage Line."
ruling: "Live Ball Foul beim Snap für illegale Bewegung,\nStrafe – 5 Meter vom Previous Spot."
