src/snapshots/afrotd__parser__tests__interpretation_7.1.4_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 4
index: 4
text: "Beim 4. und 8 schickt Team A zwei Ersatzspieler mit den Nummern 21 und 33 in das Spiel, als Ausnahme zur vorgeschriebenen Nummerierung. Diese Spieler stellen sich legal zwischen den Ends an der\nScrimmage Line auf. Nachdem der Ball gesnappt wurde, wirft ein Team\nA-Spieler, der sich 15 Meter tief in einer Scrimmage Kick-Formation\naufgestellt hat, einen legalen Vorwärtspass zu einem berechtigten Receiver und erzielt dadurch 10 Meter Raumgewinn."
ruling: "Legales\nSpiel. (Beachte: Das gleiche Spiel aus einer Fieldgoal Formation ist legal)."
