src/snapshots/afrotd__parser__tests__interpretation_7.1.5_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 5
index: 2
text: "Snapper A1 beginnt legal mit dem Snap, aber B2 schlägt ihm\nden Ball aus der Hand, bevor A1 den Snap vervollständigen kann, und\nB3 recovert den freien Ball."
ruling: "Sofort abpfeifen. Team B Dead\nBall Foul. Der Ball bleibt dead. Strafe – 5 Meter vom Succeeding Spot.\nTeam B darf den Ball nicht berühren, bevor dieser gesnappt worden ist.\nTeam A bleibt in Ballbesitz."
