src/snapshots/afrotd__parser__tests__interpretation_7.1.5_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 5
index: 4
text: "Linebacker B56 befindet sich stationär einen Meter jenseits der\nneutralen Zone. Als die Offense ihre Snap Signale ruft, täuscht B56\neinen Angriff in Richtung der Line vor und versucht so, offensichtlich\neinen Fehlstart der Offense zu provozieren."
ruling: "Dead Ball Foul.\nSpielverzögerung. 5-Meterstrafe vom Succeeding Spot."
